# file_writer_rs

./: CLAUDE.md  CMakeLists.txt  Cargo.toml  README.md  review.md
.github/workflows/: build.yml
benches/: file_writer_benchmark.rs
examples/: CMakeLists.txt  Dockerfile  main.cpp  run.sh  run_in_docker.sh
examples/cmake/: find_rustc.cmake
include/: file_writer.h
include/file_writer/: file_writer.h
src/: lib.rs
